fix width on table, add spacing to input box. Moved resume to reading page

--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,12 @@ html {
    height: 100%;
 }
 body {
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
     margin: 60px auto;
     width: 87%;
     min-height: 100%;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -32,7 +32,6 @@ h6 { font-size: 0.9em; }
 
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1em;
